--- a/index.html
+++ b/index.html
@@ -5,33 +5,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Arisha">
-  <title>Results</title>
+  <title>Index - Form</title>
   
-  <!-- Link to external CSS file (if you have one) -->
+  <!-- Link to external CSS file -->
   <link rel="stylesheet" href="style.css">
 
-  <!-- Link to JavaScript file (if you have one) -->
+  <!-- Link to external JavaScript file (if any) -->
   <script src="script.js" defer></script>
 </head>
 
 <body>
   <header>
-    <h1>Welcome to My Web Page</h1>
+    <h1>Welcome to the Form Page</h1>
   </header>
-  
-  <!-- Navigation links to other HTML files -->
-  <nav>
-    <ul>
-      <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="projects.html">Projects</a></li>
-    </ul>
-  </nav>
 
-  <!-- Main content -->
-  <section>
-    <p>This is the main content of the index page.</p>
-  </section>
+  <!-- Form for input -->
+  <form action="result.html" method="GET">
+    <label for="userInput">Enter something:</label>
+    <input type="text" id="userInput" name="userInput" required>
+    
+    <button type="submit">Submit</button>
+  </form>
 
   <footer>
     <p>© 2024 Arisha</p>
